fix bg pattern overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,6 @@ body {
   font-family: "Kumbh Sans", sans-serif;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
   background-color: #19a2ae;
   display: flex;
   flex-direction: column;
@@ -23,17 +22,21 @@ body {
   align-items: center;
   position: relative;
 }
-body::before {
-  content: url("../images/bg-pattern-top.svg");
+
+.bg-pattern {
+  width: 100%;
+  height: 100%;
   position: absolute;
   z-index: -1;
+  overflow: hidden;
+}
+.bg-pattern--top {
+  position: absolute;
   right: 50%;
   bottom: 40%;
 }
-body::after {
-  content: url("../images/bg-pattern-bottom.svg");
+.bg-pattern--bottom {
   position: absolute;
-  z-index: -1;
   left: 50%;
   top: 50%;
 }
@@ -46,9 +49,6 @@ body::after {
   border-radius: 2rem;
   overflow: hidden;
   position: relative;
-}
-.profile-card::before {
-  content: url("../images/bg-pattern-card.svg");
 }
 .profile-card__avatar {
   border: 0.5rem solid white;
