--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -15,7 +15,6 @@ body {
 
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
   background-color: $dark-cyan;
 
   display: flex;
@@ -24,19 +23,24 @@ body {
   align-items: center;
 
   position: relative;
+}
 
-  &::before {
-    content: url("../images/bg-pattern-top.svg");
+.bg-pattern {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+
+  overflow: hidden;
+
+  &--top {
     position: absolute;
-    z-index: -1;
     right: 50%;
     bottom: 40%;
   }
 
-  &::after {
-    content: url("../images/bg-pattern-bottom.svg");
+  &--bottom {
     position: absolute;
-    z-index: -1;
     left: 50%;
     top: 50%;
   }
