--- a/sass/components/_profile-card.scss
+++ b/sass/components/_profile-card.scss
@@ -1,8 +1,4 @@
 .profile-card {
-  &::before {
-    content: url("../images/bg-pattern-card.svg");
-  }
-
   display: flex;
   flex-direction: column;
   align-items: center;
